# receipts_archive

./: Dockerfile  README.md  db_architecture  db_architecture.drawio  docker-compose.yml
app/: .env  __init__.py  main.py  models.py  pyproject.toml  requirements.txt
app/core/: config.py  security.py
app/db/: database.py  init_db.py
app/routes/: receipt.py  user.py
app/tests/routes/: test_receipt.py  test_user.py
