[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "jwcrypto>=1.5.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "anyio>=4.8.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-rich>=0.2.0",
    "rich>=13.9.4",
    "toml>=0.10.2",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
